--- a/cloud2021/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud2021/cloud-provider-payment8001/src/main/resources/application.yml
@@ -9,9 +9,18 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource      #当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver        #mysql驱动包
-    url: jdbc:mysql://192.168.64.133:3306/db2021?useUnicode=true&characterEncoding-utr-8&useSSL=false
+    url: jdbc:mysql://192.168.1.200:3306/db2021?useUnicode=true&characterEncoding-utr-8&useSSL=false
     username: root
     password: salis
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.jzk.springcloud.entities #所有Entity别名类所在包
+
+eureka:
+  client:
+    #表示是否将自己注册进EurekaServer默认为true
+    register-with-eureka: true
+    #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
+    fetch-registry: true
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
