--- a/cloud2021/pom.xml
+++ b/cloud2021/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.jzk.springcloud</groupId>
+  <groupId>com.jzk.springcloud</groupId>
   <artifactId>cloud2021</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -16,8 +16,11 @@
 
   <modules>
     <module>cloud-provider-payment8001</module>
-      <module>untitled</module>
     <module>cloud-consumer-order80</module>
+    <module>cloud-api-common</module>
+      <module>cloud-eureka-server7001</module>
+      <module>cloud-eureka-server7002</module>
+      <module>cloud-eureka-server7003</module>
   </modules>
 
   <properties>
