--- a/cloud2021/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud2021/cloud-eureka-server7002/src/main/resources/application.yml
@@ -15,3 +15,8 @@ eureka:
     service-url:
       # eureka 服务注册和查询地址
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7003.com:7003/eureka/
+  server:
+    # 关闭自我保护机制
+    enable-self-preservation: false
+    # 检测时间间隔
+    eviction-interval-timer-in-ms: 2000
