--- a/cloud2021/cloud-config-center-3344/src/main/resources/application.yml
+++ b/cloud2021/cloud-config-center-3344/src/main/resources/application.yml
@@ -8,11 +8,12 @@ spring:
       server:
         git:
           search-paths: spring-cloud-config
-          uri: git@github.com:JiangZhikuan/spring-cloud-config.git
-      #          uri: https://github.com/JiangZhikuan/spring-cloud-config.git
-#          username:
-#          password:
-#          skip-ssl-validation: true
+#          uri: git@github.com:JiangZhikuan/spring-cloud-config.git
+          uri: https://github.com/JiangZhikuan/spring-cloud-config.git
+          username:
+          password:
+          skip-ssl-validation: true
+          force-pull: true
       label: master
   rabbitmq:
     host: localhost
