--- a/cloud2021/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
+++ b/cloud2021/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
@@ -1,13 +1,18 @@
 server:
-  port: 9002
+  port: 8401
+
 spring:
   application:
-    name: nacos-payment-provider
+    name: cloudalibaba-sentinel-service
   cloud:
     nacos:
       discovery:
-        #server-addr: 127.0.0.1:8848
         server-addr: 192.168.232.128:1111
+    sentinel:
+      transport:
+        dashboard: 192.168.232.128:8080
+        port: 8719
+
 management:
   endpoints:
     web:
