--- a/cloud2021/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
+++ b/cloud2021/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
@@ -12,6 +12,14 @@ spring:
       transport:
         dashboard: 192.168.232.128:8080
         port: 8719
+      datasource:
+        ds1:
+          nacos:
+            server-addr: 192.168.232.128:1111
+            dataId: ${spring.application.name}
+            groupId: DEFAULT_GROUP
+            data-type: json
+            rule-type: flow
 
 management:
   endpoints:
